Added in list of belts and a syllabus of techniques for each

--- a/templates/_baseStudent.html.twig
+++ b/templates/_baseStudent.html.twig
@@ -23,7 +23,7 @@
         </li>
 
         <li>
-            <a href="/syllabus" class="{% block listLinkStyle %}{% endblock %}">Grade Syllabus</a>
+            <a href="/belts" class="{% block listLinkStyle %}{% endblock %}">Grade Syllabus</a>
         </li>
 
         <li>
