--- a/templates/student/showSingleStudent.html.twig
+++ b/templates/student/showSingleStudent.html.twig
@@ -16,10 +16,11 @@
     <br>
     Average Grade = {{ student.avggrade }}
     <br>
+    Last Grading = {{ student.lastGrading }}
     {#Eligible = {{ student.eligible }}#}
     <br>
     {#Techniques seen  = {{ student.seen }}#}
-
+    Time Since Last Grading is
     <br>
     {#<a href = "/addTechniqueSeen/{{ student.id }}">Add Technique Seen</a>#}
 
