Attendances and percentages working in database and site

--- a/templates/student/showSingleStudent.html.twig
+++ b/templates/student/showSingleStudent.html.twig
@@ -20,7 +20,7 @@
     {#Eligible = {{ student.eligible }}#}
     <br>
     {#Techniques seen  = {{ student.seen }}#}
-    Time Since Last Grading is
+    Time Since Last Grading is {{ timeSince }} months
     <br>
     {#<a href = "/addTechniqueSeen/{{ student.id }}">Add Technique Seen</a>#}
 
