--- a/templates/admin/markAttendance.html.twig
+++ b/templates/admin/markAttendance.html.twig
@@ -57,7 +57,7 @@
                     <input type="hidden" name="sessionId" value="{{ class.id }}">
                     <input type="hidden" name="id" value="{{ student.id }}">
                     <input type="hidden" name="dateString" value="{{ dateString }}">
-                    <input type="submit" value="Attended">
+                    <input type="submit" value="submit">
                     </td>
                         {% endif %}
    </form>
