--- a/templates/admin/markAttendance.html.twig
+++ b/templates/admin/markAttendance.html.twig
@@ -11,7 +11,6 @@
 {##}
     <hr>
     <table>
-        <form action="/processAttendance"method="post">
 
         <tr>
             <th> ID </th>
@@ -26,8 +25,9 @@
         </tr>
 
         {% for student in students %}
+
             <tr>
-                <td><a href = "/showStudent/{{ student.id }}">{{ student.id }}</a>
+                <td>{{ student.id }}</a>
                 </td>
                 <td>{{ student.surname }}</td>
                 <td>{{ student.firstname }}</td>
@@ -46,22 +46,20 @@
                     {#{% endif %}#}
                 </td>
                 <td>
-                    {% if attendances is defined %}
-                      <select name="atten">
+                <form action="/processAttendance"method="post">
+
+    <select name="atten">
                     <option value = 1> - Present  </option>
                     <option value = 0> - Abscent - </option>
                     </select>
-                </td>
-                <td>
 
                     <input type="hidden" name="sessionId" value="{{ class.id }}">
                     <input type="hidden" name="id" value="{{ student.id }}">
                     <input type="hidden" name="dateString" value="{{ dateString }}">
                     <input type="submit" value="submit">
-                    </td>
-                        {% endif %}
-   </form>
 
+                </form>
+                </td>
 
             </tr>
         {% endfor %}
