Commenting right for documentor

--- a/templates/loginSuccess.html.twig
+++ b/templates/loginSuccess.html.twig
@@ -3,6 +3,6 @@
 {% block pageTitle %}List Page {% endblock %}
 
 {% block main %}
-    <h1>Success! The name is {{ user }} and password is {{ pass }}</h1>
+    <h1>Success! {{ user }}</h1>
 
 {% endblock %}
