--- a/templates/admin/showSingleStudent.html.twig
+++ b/templates/admin/showSingleStudent.html.twig
@@ -2,7 +2,7 @@
 
 {% block pageTitle %}Single Student Page {% endblock %}
 
-{% block main %}sadasd
+{% block main %}
 <h1>{{ student.firstname }} {{ student.surname }}</h1>
 
     ID = {{ student.id }}
